--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,63 @@ matrix:
             - g++-5
             - cmake
             - cmake-data
+            - build-essential 
+            - pkg-config 
+            - yasm 
+            - gfortran
+            - git
+            - libjpeg8-dev 
+            - libjasper-dev 
+            - libpng12-dev
+            - libtiff4-dev
+            - libavcodec-dev 
+            - libavformat-dev
+            - libswscale-dev 
+            - libdc1394-22-dev
+            - libv4l-dev
+            - libgstreamer0.10-dev
+            - libgstreamer-plugins-base0.10-dev
+            - libqt4-dev 
+            - libgtk2.0-dev
+            - libtbb-dev
+            - libatlas-base-dev
+            - libfaac-dev 
+            - libmp3lame-dev 
+            - libtheora-dev
+            - libvorbis-dev 
+            - libxvidcore-dev
+            - v4l-utils
+            
       env: COMPILER=g++-5
 
 before_install:
   - pip install --user cpp-coveralls
 install:
   - sudo apt-get install -y -qq lcov
+  - sudo apt-get install -y checkinstall
+  - sudo apt-get install -y libopencore-amrnb-dev libopencore-amrwb-dev
+  - sudo apt-get install -y x264
+before_script:
+  - git clone https://github.com/opencv/opencv.git
+  - cd opencv
+  - git checkout 3.3.0
+  - cd ..
+
+  - git clone https://github.com/opencv/opencv_contrib.git
+  - cd opencv_contrib
+  - git checkout 3.3.0
+  - cd ..
+
+  - cd opencv
+  - mkdir build
+  - cd build
+  - cmake -D CMAKE_BUILD_TYPE=RELEASE -D CMAKE_INSTALL_PREFIX=/usr/local -D WITH_TBB=ON -D WITH_V4L=ON -D WITH_QT=ON -D WITH_OPENGL=ON -D OPENCV_EXTRA_MODULES_PATH=../../opencv_contrib/modules ..
+  - make -j$(nproc)
+  - sudo make install
+  - sudo sh -c 'echo "/usr/local/lib" >> /etc/ld.so.conf.d/opencv.conf'
+  - sudo ldconfig
+
+  - cd ../../
 script:
   - export CXX=$COMPILER;
   - mkdir build
