--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,5 +1,12 @@
-add_executable(shell-app main.cpp)
-target_link_libraries( shell-app ${OpenCV_LIBS} )
+add_executable(shell-app main.cpp VideoFrame.cpp)
+
+# find_package( OpenCV REQUIRED )
+
+#add_library(vidframe
+#  VideoFrame.cpp
+#)
+# target_link_libraries( shell-app ${OpenCV_LIBS} vidframe)
+target_link_libraries( shell-app ${OpenCV_LIBS})
 
 include_directories(
     ${CMAKE_SOURCE_DIR}/include
