[testinplace]Vision Manager Implemented. SIFT matching needs tuning

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(shell-app main.cpp ObjectDetector.cpp SiftDetector.cpp)
+add_executable(shell-app main.cpp ObjectDetector.cpp SiftDetector.cpp VisionManager.cpp)
 
 find_package( OpenCV REQUIRED )
 
