--- a/.travis.yml
+++ b/.travis.yml
@@ -75,6 +75,9 @@ before_script:
   - sudo ldconfig
 
   - cd ../../
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 script:
   - export CXX=$COMPILER;
   - mkdir build
