--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,3 +31,4 @@ add_subdirectory(test)
 add_subdirectory(vendor/googletest/googletest)
 
 file(COPY data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+# file(COPY Outputs DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
